# AGV-adaptative-localization

./: .gitignore  .gitmodules  README.md  build.sh  open.sh  stop.sh
docker-base/: Dockerfile  README.md
docker-base-ros2/: Dockerfile
ws/src/adaptative_localization/: CMakeLists.txt  package.xml
ws/src/adaptative_localization/config/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf.yaml  ekf_local_config.yaml  paramter.yaml
ws/src/adaptative_localization/launch/: AGV_Amcl.launch  AGV_Mapping.launch  AGV_moving.launch  ekf_localization.launch
ws/src/adaptative_localization/rviz_config/: amcl_config.rviz  moving_config.rviz
ws/src/agv/agv_simulation/launch/: spawn_agv.launch
ws/src/robot_line_follower/: CMakeLists.txt  package.xml
ws/src/robot_line_follower/launch/: line_follower.launch
ws/src/robot_line_follower/scripts/: detector.py  follower.py
